--- a/expressui-parent/pom.xml
+++ b/expressui-parent/pom.xml
@@ -49,7 +49,7 @@
         <spring.version>3.0.6.RELEASE</spring.version>
         <spring.security.version>3.1.0.RC2</spring.security.version>
         <hibernate.version>3.6.7.Final</hibernate.version>
-        <vaadin.version>6.6.7</vaadin.version>
+        <vaadin.version>6.7.1</vaadin.version>
         <gwt.version>2.3.0</gwt.version>
         <h2.version>1.3.160</h2.version>
     </properties>
@@ -242,11 +242,11 @@
                 <version>1.1.0</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.vaadin.addons</groupId>
-                <artifactId>chameleon</artifactId>
-                <version>1.0.2</version>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>org.vaadin.addons</groupId>-->
+                <!--<artifactId>chameleon</artifactId>-->
+                <!--<version>1.0.2</version>-->
+            <!--</dependency>-->
 
             <dependency>
                 <groupId>org.vaadin.addons</groupId>
@@ -254,11 +254,11 @@
                 <version>1.0.2</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.vaadin.addons</groupId>
-                <artifactId>chameleon-vaadin</artifactId>
-                <version>1.0.2</version>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>org.vaadin.addons</groupId>-->
+                <!--<artifactId>chameleon-vaadin</artifactId>-->
+                <!--<version>1.0.2</version>-->
+            <!--</dependency>-->
 
             <!-- Misc -->
             <dependency>
