--- a/expressui-parent/pom.xml
+++ b/expressui-parent/pom.xml
@@ -47,11 +47,11 @@
 
     <properties>
         <spring.version>3.0.6.RELEASE</spring.version>
-        <spring.security.version>3.1.0.RC2</spring.security.version>
-        <hibernate.version>3.6.7.Final</hibernate.version>
-        <vaadin.version>6.7.1</vaadin.version>
-        <gwt.version>2.3.0</gwt.version>
-        <h2.version>1.3.160</h2.version>
+        <spring.security.version>3.1.0.RC3</spring.security.version>
+        <hibernate.version>3.6.8.Final</hibernate.version>
+        <vaadin.version>6.7.2</vaadin.version>
+        <gwt.version>2.4.0</gwt.version>
+        <h2.version>1.3.161</h2.version>
     </properties>
 
     <distributionManagement>
@@ -188,9 +188,21 @@
             </dependency>
 
             <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                <version>1.6.12</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjtools</artifactId>
+                <version>1.6.12</version>
+            </dependency>
+
+            <dependency>
                 <groupId>net.sf.ehcache</groupId>
                 <artifactId>ehcache</artifactId>
-                <version>2.4.4</version>
+                <version>2.4.6</version>
                 <type>pom</type>
             </dependency>
 
@@ -242,28 +254,16 @@
                 <version>1.1.0</version>
             </dependency>
 
-            <!--<dependency>-->
-            <!--<groupId>org.vaadin.addons</groupId>-->
-            <!--<artifactId>chameleon</artifactId>-->
-            <!--<version>1.0.2</version>-->
-            <!--</dependency>-->
-
             <dependency>
                 <groupId>org.vaadin.addons</groupId>
                 <artifactId>chameleon-blue</artifactId>
                 <version>1.0.2</version>
             </dependency>
 
-            <!--<dependency>-->
-            <!--<groupId>org.vaadin.addons</groupId>-->
-            <!--<artifactId>chameleon-vaadin</artifactId>-->
-            <!--<version>1.0.2</version>-->
-            <!--</dependency>-->
-
             <dependency>
                 <groupId>org.vaadin.addons</groupId>
                 <artifactId>portallayout</artifactId>
-                <version>1.1.1</version>
+                <version>1.3.1</version>
             </dependency>
 
             <dependency>
@@ -287,7 +287,7 @@
             <dependency>
                 <groupId>org.vaadin.addons</groupId>
                 <artifactId>tableexport</artifactId>
-                <version>1.2.6</version>
+                <version>1.2.8</version>
             </dependency>
 
             <dependency>
@@ -329,12 +329,12 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.6.2</version>
+                <version>1.6.4</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>1.6.2</version>
+                <version>1.6.4</version>
             </dependency>
 
             <dependency>
@@ -346,32 +346,32 @@
             <dependency>
                 <groupId>com.googlecode.libphonenumber</groupId>
                 <artifactId>libphonenumber</artifactId>
-                <version>3.9</version>
+                <version>4.2</version>
             </dependency>
 
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.9</version>
+                <version>4.10</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.jboss.resteasy</groupId>
                 <artifactId>resteasy-jaxrs</artifactId>
-                <version>2.2.1.GA</version>
+                <version>2.2.3.GA</version>
             </dependency>
 
             <dependency>
                 <groupId>org.jboss.resteasy</groupId>
                 <artifactId>resteasy-jaxb-provider</artifactId>
-                <version>2.2.1.GA</version>
+                <version>2.2.3.GA</version>
             </dependency>
 
             <dependency>
                 <groupId>org.jboss.resteasy</groupId>
                 <artifactId>resteasy-spring</artifactId>
-                <version>2.2.1.GA</version>
+                <version>2.2.3.GA</version>
             </dependency>
 
             <dependency>
@@ -422,7 +422,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.9</version>
+                    <version>2.10</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -461,7 +461,7 @@
                 <plugin>
                     <groupId>org.mortbay.jetty</groupId>
                     <artifactId>jetty-maven-plugin</artifactId>
-                    <version>7.5.1.v20110908</version>
+                    <version>8.0.4.v20111024</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -489,7 +489,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-report-plugin</artifactId>
-                    <version>2.9</version>
+                    <version>2.10</version>
                 </plugin>
 
                 <plugin>
@@ -501,7 +501,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>2.6</version>
+                    <version>2.7</version>
                 </plugin>
 
                 <plugin>
@@ -616,7 +616,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.9</version>
+                <version>2.10</version>
                 <configuration>
                     <systemPropertyVariables>
                         <property>
