--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.dev.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/database.dev.properties
@@ -14,6 +14,8 @@ hibernate.connection.password=
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 hibernate.default_schema=${artifactId}
+
+# must be duplicated in persistence.xml in order to work around hibernate3-maven-plugin bug where this param is ignored
 hibernate.naming_strategy=com.expressui.core.util.UpperCaseAndUnderscoresNamingStrategy
 hibernate.hbm2ddl.auto=none
 hibernate.jdbc.batch_size=50
@@ -27,6 +29,8 @@ hibernate.cache.region_prefix=
 hibernate.cache.provider_configuration_file_resource_path=ehcache.xml
 
 hibernate.generate_statistics=false
+
 # better control by configuring log4j.xml than setting this to true
 hibernate.show_sql=false
+
 hibernate.format_sql=true
