--- a/sample/src/main/resources/database.prod.properties
+++ b/sample/src/main/resources/database.prod.properties
@@ -35,19 +35,35 @@
 # address: juan@brownbagconsulting.com.
 #
 
+# Used if JNDI lookup succeeds in JEE environment, otherwise falls back on connection settings below
+jndi.dataSource=sampleDataSource
+
+hibernate.connection.driver_class=com.mysql.jdbc.Driver
+hibernate.connection.url.test=jdbc:mysql://localhost/sample
+hibernate.connection.url=jdbc:mysql://localhost/sample
+hibernate.connection.username=sample
+hibernate.connection.password=
+
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+hibernate.default_schema=SAMPLE
+# must be duplicated in persistence.xml in order to work around hibernate3-maven-plugin bug where this param is ignored
+hibernate.naming_strategy=com.expressui.core.util.UpperCaseAndUnderscoresNamingStrategy
+
 hibernate.hbm2ddl.auto=none
-hibernate.generate_statistics=true
-hibernate.show_sql=true
-hibernate.format_sql=true
+hibernate.jdbc.batch_size=50
+
+hibernate.cache.use_structured_entries true
 hibernate.cache.use_second_level_cache=true
 hibernate.cache.use_query_cache=true
-hibernate.cache.provider_class=org.hibernate.cache.SingletonEhCacheProvider
-hibernate.cache.region.factory_class=net.sf.ehcache.hibernate.SingletonEhCacheRegionFactory
+hibernate.cache.region.factory_class=org.hibernate.cache.EhCacheRegionFactory
+hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
 hibernate.cache.region_prefix=
 hibernate.cache.provider_configuration_file_resource_path=ehcache.xml
 
-hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
-hibernate.connection.driver_class=oracle.jdbc.OracleDriver
-hibernate.connection.url=
-hibernate.connection.username=sample
-hibernate.connection.password=sample
+hibernate.generate_statistics=false
+
+# better control by configuring log4j.xml than setting this to true
+hibernate.show_sql=false
+
+hibernate.format_sql=true
