--- a/expressui-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/expressui-archetype/src/main/resources/archetype-resources/pom.xml
@@ -25,7 +25,8 @@
     <parent>
         <groupId>com.expressui</groupId>
         <artifactId>expressui-app-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-RC1-SNAPSHOT</version>
+        <relativePath/>
     </parent>
 
     <description>${artifactId} Web Application</description>
