--- a/expressui-core/pom.xml
+++ b/expressui-core/pom.xml
@@ -42,7 +42,7 @@
     <parent>
         <groupId>com.expressui</groupId>
         <artifactId>expressui-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-RC1-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
@@ -50,7 +50,6 @@
     <groupId>com.expressui</groupId>
     <artifactId>expressui-core</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
 
