--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+    <parent>
+        <groupId>com.expressui</groupId>
+        <artifactId>expressui-parent</artifactId>
+        <version>1.0.0-RC1-SNAPSHOT</version>
+        <relativePath/>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <distributionManagement>
@@ -52,13 +59,11 @@
     <groupId>com.expressui</groupId>
     <artifactId>expressui-main</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
 
     <modules>
         <module>expressui-parent</module>
         <module>expressui-core</module>
         <module>expressui-domain</module>
-        <module>expressui-archetype</module>
         <module>sample</module>
     </modules>
 
