--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -60,7 +60,7 @@
     <parent>
         <groupId>com.expressui</groupId>
         <artifactId>expressui-app-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-RC1-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
